# amplifier-module-provider-openai

./: README.md  pyproject.toml
amplifier_module_provider_openai/: __init__.py  _response_handling.py  oauth.py
docs/plans/: 2026-04-21-openai-oauth-subscription-auth-design.md  2026-04-21-openai-oauth-subscription-auth-implementation.md  2026-04-22-oauth-integration-findings.md
tests/: test_oauth.py  test_subscription_auth.py
